--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "file-saver": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
     "js-yaml": "^3.12.2",
+    "jquery": "^3.3.1",
     "mustache": "^3.0.1",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^9.0.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
@@ -40,5 +42,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "github-create-issue": "^2.0.0"
+  }
 }
