--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "2.1.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "yarn": "^1.13.0"
+    "yarn": "^1.13.0",
+    "core-js": "3.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
